force-app/main/default/objects/Copado_Builder_User_Preference__c/Copado_Builder_User_Preference__c.object-meta.xml
<CustomObject>
    <description>Per-developer Copado Builder preferences (default Dev environment).</description>
    <label>Copado Builder User Preference</label>
    <nameField>
        <displayFormat>PREF-{0000}</displayFormat>
        <label>Preference Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Copado Builder User Preferences</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>