force-app/main/default/objects/Copado_Builder_User_Preference__c/fields/Environment_Id__c.field-meta.xml
<CustomField>
    <fullName>Environment_Id__c</fullName>
    <description>Preferred Copado Environment / Org Credential Id, or Copado AI Integration Id for DEFAULT_INTEGRATION prefs</description>
    <label>Environment Id</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>