force-app/main/default/objects/Copado_Builder_User_Preference__c/fields/External_Key__c.field-meta.xml
<CustomField>
    <fullName>External_Key__c</fullName>
    <description>UserId_ProjectId (or UserId_ALL) for upsert</description>
    <externalId>true</externalId>
    <label>External Key</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>