force-app/main/default/objects/Copado_Builder_User_Preference__c/fields/Project_Id__c.field-meta.xml
<CustomField>
    <fullName>Project_Id__c</fullName>
    <description>Copado Project Id this preference applies to (blank = all projects)</description>
    <label>Project Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>